// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton matches forest theme snapshot 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "borderBottomColor": "rgba(0, 0, 0, 0)",
        "borderBottomLeftRadius": 22,
        "borderBottomRightRadius": 22,
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(0, 0, 0, 0)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(0, 0, 0, 0)",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "rgba(0, 0, 0, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderTopWidth": 0,
        "cursor": "pointer",
        "height": 44,
        "justifyContent": "center",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 44,
      }
    }
  >
    <Text
      style={
        {
          "color": "#14281A",
        }
      }
      suppressHighlighting={true}
    >
      Icon
    </Text>
  </View>
</View>
`;

exports[`IconButton matches midnight theme snapshot 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "borderBottomColor": "rgba(0, 0, 0, 0)",
        "borderBottomLeftRadius": 22,
        "borderBottomRightRadius": 22,
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(0, 0, 0, 0)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(0, 0, 0, 0)",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "rgba(0, 0, 0, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderTopWidth": 0,
        "cursor": "pointer",
        "height": 44,
        "justifyContent": "center",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 44,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FAFAFA",
        }
      }
      suppressHighlighting={true}
    >
      Icon
    </Text>
  </View>
</View>
`;

exports[`IconButton matches sunrise theme snapshot 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "borderBottomColor": "rgba(0, 0, 0, 0)",
        "borderBottomLeftRadius": 22,
        "borderBottomRightRadius": 22,
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(0, 0, 0, 0)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(0, 0, 0, 0)",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "rgba(0, 0, 0, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderTopWidth": 0,
        "cursor": "pointer",
        "height": 44,
        "justifyContent": "center",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 44,
      }
    }
  >
    <Text
      style={
        {
          "color": "#271F15",
        }
      }
      suppressHighlighting={true}
    >
      Icon
    </Text>
  </View>
</View>
`;
